[package]
name = "RUST-14588"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_with = {version = "3.8.1", optional = true}

[features]
external = ["dep:serde", "dep:serde_with"]